set(BINARY ${CMAKE_PROJECT_NAME})
file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.cpp)
set(SOURCES ${SOURCES})
add_executable(${BINARY}_run ${SOURCES})
add_library(${BINARY}_lib STATIC ${SOURCES} main.cpp Socket/ClientSock.cpp Socket/ClientSock.h DataBaseReader/Website.cpp DataBaseReader/Website.h ../loadData/main.cpp ../lib/CWebServer/src/HTTP/HTTPRequest.cpp ../lib/CWebServer/src/HTTP/HTTPRequest.h  ../lib/CWebServer/src/HTTP/HTTPResponse.h ../lib/CWebServer/src/HTTP/HTTPResponse.cpp ../lib/CWebServer/src/Model/Model.cpp ../lib/CWebServer/src/Model/Model.h ../lib/CWebServer/src/Server/Server.cpp ../lib/CWebServer/src/Server/Server.h ../lib/CWebServer/src/Model/Model.h ../lib/CWebServer/src/Model/Model.cpp ../lib/CWebServer/src/Sockets/ServSock.cpp ../lib/CWebServer/src/Sockets/ServSock.h ../lib/CWebServer/src/View/Template.cpp ../lib/CWebServer/src/View/Template.h )
SET(CMAKE_CXX_FLAGS -pthread)
